--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -9,13 +9,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import wandb\n",
     "import pandas as pd\n",
-    "import pandas_profiling"
+    "import ydata_profiling"
    ]
   },
   {
@@ -27,9 +27,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Failed to detect the name of this notebook, you can set it manually with the WANDB_NOTEBOOK_NAME environment variable to enable code saving.\n",
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mfuchengliew\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.16.1 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.16.0"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/home/fucheng96/build-ml-pipeline-for-short-term-rental-prices/src/eda/wandb/run-20240103_160102-f4t6zgte</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte' target=\"_blank\">giddy-forest-4</a></strong> to <a href='https://wandb.ai/fuchengliew/nyc_airbnb' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View project at <a href='https://wandb.ai/fuchengliew/nyc_airbnb' target=\"_blank\">https://wandb.ai/fuchengliew/nyc_airbnb</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       " View run at <a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte' target=\"_blank\">https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte</a>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Initiate wandb\n",
     "run = wandb.init(project=\"nyc_airbnb\", group=\"eda\", save_code=True)\n",
@@ -53,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Perform pandas_profiling\n",
-    "profile = pandas_profiling.ProfileReport(df)\n",
+    "profile = ydata_profiling.ProfileReport(df)\n",
     "profile.to_widgets()\n",
     "\n",
     "# Show profile\n",
