--- a/src/eda/EDA.ipynb
+++ b/src/eda/EDA.ipynb
@@ -41,7 +41,7 @@
     {
      "data": {
       "text/html": [
-       "wandb version 0.16.1 is available!  To upgrade, please run:\n",
+       "wandb version 0.16.2 is available!  To upgrade, please run:\n",
        " $ pip install wandb --upgrade"
       ],
       "text/plain": [
@@ -66,7 +66,7 @@
     {
      "data": {
       "text/html": [
-       "Run data is saved locally in <code>/home/fucheng96/build-ml-pipeline-for-short-term-rental-prices/src/eda/wandb/run-20240103_160102-f4t6zgte</code>"
+       "Run data is saved locally in <code>/home/fucheng96/build-ml-pipeline-for-short-term-rental-prices/src/eda/wandb/run-20240111_220053-kfv51wo1</code>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -78,7 +78,7 @@
     {
      "data": {
       "text/html": [
-       "Syncing run <strong><a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte' target=\"_blank\">giddy-forest-4</a></strong> to <a href='https://wandb.ai/fuchengliew/nyc_airbnb' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
+       "Syncing run <strong><a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/kfv51wo1' target=\"_blank\">expert-valley-8</a></strong> to <a href='https://wandb.ai/fuchengliew/nyc_airbnb' target=\"_blank\">Weights & Biases</a> (<a href='https://wandb.me/run' target=\"_blank\">docs</a>)<br/>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -102,7 +102,7 @@
     {
      "data": {
       "text/html": [
-       " View run at <a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte' target=\"_blank\">https://wandb.ai/fuchengliew/nyc_airbnb/runs/f4t6zgte</a>"
+       " View run at <a href='https://wandb.ai/fuchengliew/nyc_airbnb/runs/kfv51wo1' target=\"_blank\">https://wandb.ai/fuchengliew/nyc_airbnb/runs/kfv51wo1</a>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
